refactor: optimize imports and cleanup code